syntax = "proto3";

package product;

service ProductService {
  rpc UpdateProductQuantity (UpdateProductQuantityRequest) returns (UpdateProductQuantityResponse);
  rpc StreamProductUpdates (stream UpdateProductQuantityRequest) returns (stream UpdateProductQuantityResponse);
  rpc GetAllProducts (Empty) returns (ProductList); 
}

message UpdateProductQuantityRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message UpdateProductQuantityResponse {
  bool success = 1;
  string message = 2;
  string product_id = 3;
  int32 quantity = 4;
}

message Empty {}

message Product {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  double price = 4;
}

message ProductList {
  repeated Product products = 1;
}